--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,7 +1,46 @@
-//add everything here
+plugins {
+    id 'java-library'
+    id 'maven-publish'
+}
+
+java {
+    sourceCompatibility = 11
+}
+
+group = 'com.saniazt'
+version = '1.3.5'
+
+repositories {
+    mavenCentral()
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = 'com.saniazt'
+            artifactId = 'utils'
+            version = '1.3.5'
+
+            from components.java
+        }
+    }
+}
+
+dependencies {
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+}
+
+jar {
+    manifest {
+        attributes(
+                "Implementation-Title": "utils",
+                "Implementation-Version": "1.3.5"
+        )
+    }
+}
 
 test {
     useJUnitPlatform()
 }
 
-compileJava {}.dependsOn(':utils:publishToMavenLocal')
+publishMavenPublicationToMavenLocal {}.mustRunAfter('build')
