--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,46 +1,16 @@
-plugins {
-    id 'java-library'
-    id 'maven-publish'
-}
-
-java {
-    sourceCompatibility = 11
-}
-
-group = 'com.saniazt'
-version = '1.3.5'
+group = 'com.epam'
+version = '1.0'
 
 repositories {
     mavenCentral()
 }
 
-publishing {
-    publications {
-        maven(MavenPublication) {
-            groupId = 'com.saniazt'
-            artifactId = 'utils'
-            version = '1.3.5'
-
-            from components.java
-        }
-    }
-}
-
 dependencies {
-    implementation 'org.apache.commons:commons-lang3:3.12.0'
-}
-
-jar {
-    manifest {
-        attributes(
-                "Implementation-Title": "utils",
-                "Implementation-Version": "1.3.5"
-        )
-    }
+    implementation project(':utils')
 }
 
 test {
     useJUnitPlatform()
 }
 
-publishMavenPublicationToMavenLocal {}.mustRunAfter('build')
+compileJava {}.dependsOn(':utils:publishToMavenLocal')
