--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -7,7 +7,7 @@ java {
     sourceCompatibility = 11
 }
 
-group = 'com.saniazt'
+group = 'com.epam'
 version = '1.3.5'
 
 repositories {
@@ -17,7 +17,7 @@ repositories {
 publishing {
     publications {
         maven(MavenPublication) {
-            groupId = 'com.saniazt'
+            groupId = 'com.epam'
             artifactId = 'utils'
             version = '1.3.5'
 
